fix our-teachers gaps & paddings

--- a/src/css/our-teachers.css
+++ b/src/css/our-teachers.css
@@ -42,9 +42,8 @@
 .teachers_list {
   display: grid;
   grid-template-columns: 1fr;
-  gap: 32px;
+  gap: 40px;
   justify-items: center;
-  padding: 0;
   list-style: none;
 }
 
@@ -54,8 +53,8 @@
 }
 
 .teachers_item img {
-  width: 120px;
-  height: 120px;
+  width: 150px;
+  height: 150px;
   border-radius: 50%;
   display: block;
   margin: 0 auto 16px;
@@ -64,7 +63,7 @@
 }
 
 .teachers_name {
-  margin: 16px 0 8px;
+  margin-bottom: 8px;
   font:
     700 20px/1.2 'Manrope',
     sans-serif;
@@ -105,8 +104,6 @@
   .teachers_list {
     grid-template-columns: repeat(2, minmax(232px, 1fr));
     gap: 32px;
-    padding-left: 64px;
-    padding-right: 64px;
   }
 
   .teachers_item {
